force-app/main/default/objects/Fiche_projet__c/Fiche_projet__c.object-meta.xml
<CustomObject>
    <label>Fiche projet</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Numéro demande</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiches projet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>