force-app/main/default/objects/Fiche_projet__c/fields/Avancement__c.field-meta.xml
<CustomField>
    <fullName>Avancement__c</fullName>
    <inlineHelpText>% d&apos;avancement du développement / configuration</inlineHelpText>
    <label>% Avancement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>