force-app/main/default/objects/Fiche_projet__c/fields/Charge_Analyse_J__c.field-meta.xml
<CustomField>
    <fullName>Charge_Analyse_J__c</fullName>
    <formula>Charge_J__c * 15/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Analyse et spécifications (7% du build)</inlineHelpText>
    <label>Charge (Analyse J)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>