force-app/main/default/objects/Fiche_projet__c/fields/Charge_Euro__c.field-meta.xml
<CustomField>
    <fullName>Charge_Euro__c</fullName>
    <formula>(Charge_Analyse_J__c  * 750) + ( Charge_J__c * 490) + ( Charge_Tests_J__c * 490 * 80/100) + ( Charge_Tests_J__c * 750* 20/100)  + ( Charge_PM_J__c * 980)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Analyse : 750 €
Build : 490 €
Tests : 490 80% + 750 20%
PM : 980 €</inlineHelpText>
    <label>Charge (€)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>