force-app/main/default/objects/Fiche_projet__c/fields/Charge_J__c.field-meta.xml
<CustomField>
    <fullName>Charge_J__c</fullName>
    <inlineHelpText>Charge de développement / configuration en jours
Unité : 0,1</inlineHelpText>
    <label>Charge (J)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>