force-app/main/default/objects/Fiche_projet__c/fields/Charge_PM_J__c.field-meta.xml
<CustomField>
    <fullName>Charge_PM_J__c</fullName>
    <formula>Charge_J__c * 15/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gestion de projet (15% du build)</inlineHelpText>
    <label>Charge (PM J)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>