force-app/main/default/objects/Fiche_projet__c/fields/Charge_Tests_J__c.field-meta.xml
<CustomField>
    <fullName>Charge_Tests_J__c</fullName>
    <formula>Charge_J__c * 7/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recette utilisateur (7% du build)</inlineHelpText>
    <label>Charge (Tests J)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>