force-app/main/default/objects/Fiche_projet__c/fields/Charge_Total_J__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total_J__c</fullName>
    <formula>Charge_Analyse_J__c + Charge_J__c  +  Charge_Tests_J__c + Charge_PM_J__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge (Total J)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>