force-app/main/default/objects/Fiche_projet__c/fields/Date_de_fermeture__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fermeture__c</fullName>
    <description>Lecture seule. Alimentée par workflow...</description>
    <label>Date de fermeture</label>
    <type>Date</type>
</CustomField>