force-app/main/default/objects/Fiche_projet__c/fields/Date_en_prod__c.field-meta.xml
<CustomField>
    <fullName>Date_en_prod__c</fullName>
    <label>Date en prod</label>
    <type>Date</type>
</CustomField>