force-app/main/default/objects/Fiche_projet__c/fields/Date_en_test__c.field-meta.xml
<CustomField>
    <fullName>Date_en_test__c</fullName>
    <inlineHelpText>Date à renseigner exclusivement par Kerensen</inlineHelpText>
    <label>Date en test</label>
    <type>Date</type>
</CustomField>