force-app/main/default/objects/Fiche_projet__c/fields/Date_limite__c.field-meta.xml
<CustomField>
    <fullName>Date_limite__c</fullName>
    <inlineHelpText>Date à renseigner exclusivement par le client</inlineHelpText>
    <label>Date limite</label>
    <type>Date</type>
</CustomField>