force-app/main/default/objects/Fiche_projet__c/fields/Domaine__c.field-meta.xml
<CustomField>
    <fullName>Domaine__c</fullName>
    <label>Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activité</fullName>
            </value>
            <value>
                <fullName>Campagne</fullName>
            </value>
            <value>
                <fullName>Chantier</fullName>
            </value>
            <value>
                <fullName>Configurateur</fullName>
            </value>
            <value>
                <fullName>Contrat</fullName>
            </value>
            <value>
                <fullName>Courrier</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Devis</fullName>
            </value>
            <value>
                <fullName>Formation</fullName>
            </value>
            <value>
                <fullName>Foyer</fullName>
            </value>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Opération</fullName>
            </value>
            <value>
                <fullName>Profils</fullName>
            </value>
            <value>
                <fullName>Projet</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Requête</fullName>
            </value>
            <value>
                <fullName>Sécurité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>