force-app/main/default/objects/Fiche_projet__c/fields/Edit__c.field-meta.xml
<CustomField>
    <fullName>Edit__c</fullName>
    <formula>HYPERLINK(&quot;https://cs7.salesforce.com/&quot; &amp;  Id &amp; &quot;/e&quot;, &quot;Edit&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit</label>
    <type>Text</type>
</CustomField>