force-app/main/default/objects/Fiche_projet__c/fields/Fait_en_production__c.field-meta.xml
<CustomField>
    <fullName>Fait_en_production__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cohez cette case si la modification a été reportée manuellement dans l&apos;environnement de production</inlineHelpText>
    <label>Fait en production ?</label>
    <type>Checkbox</type>
</CustomField>