force-app/main/default/objects/Fiche_projet__c/fields/Fiche_parent__c.field-meta.xml
<CustomField>
    <fullName>Fiche_parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiche parent</label>
    <referenceTo>Fiche_projet__c</referenceTo>
    <relationshipLabel>Fiches projet</relationshipLabel>
    <relationshipName>Anomalies</relationshipName>
    <type>Lookup</type>
</CustomField>