force-app/main/default/objects/Fiche_projet__c/fields/Liste_des_modifications__c.field-meta.xml
<CustomField>
    <fullName>Liste_des_modifications__c</fullName>
    <inlineHelpText>Décrire la liste des modifications de la configuration</inlineHelpText>
    <label>Liste des modifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>