force-app/main/default/objects/Fiche_projet__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lot 1</fullName>
            </value>
            <value>
                <fullName>Lot 2</fullName>
            </value>
            <value>
                <fullName>Lot 3</fullName>
            </value>
            <value>
                <fullName>Lot 4</fullName>
            </value>
            <value>
                <fullName>Lot 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>