force-app/main/default/objects/Fiche_projet__c/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <inlineHelpText>Personne, réunion, contexte</inlineHelpText>
    <label>Origine</label>
    <length>30</length>
    <type>Text</type>
</CustomField>