force-app/main/default/objects/Fiche_projet__c/fields/Pas_de_modification__c.field-meta.xml
<CustomField>
    <fullName>Pas_de_modification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pas de modification de la configuration (RV, workflow, champ...)</inlineHelpText>
    <label>Pas de modification</label>
    <type>Checkbox</type>
</CustomField>