force-app/main/default/objects/Fiche_projet__c/fields/Processus__c.field-meta.xml
<CustomField>
    <fullName>Processus__c</fullName>
    <formula>&quot;Si vous ne pouvez pas traiter la fiche, changez le statut, ajoutez une note et changez le propritétaire en cochant &apos;Notification par Email&apos;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processus</label>
    <type>Text</type>
</CustomField>