force-app/main/default/objects/Fiche_projet__c/fields/Profils_concernes__c.field-meta.xml
<CustomField>
    <fullName>Profils_concernes__c</fullName>
    <label>Profils concernés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Profil 1</fullName>
            </value>
            <value>
                <fullName>Profil 2</fullName>
            </value>
            <value>
                <fullName>Profil 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>