force-app/main/default/objects/Fiche_projet__c/fields/Reference_cahier_de_recette__c.field-meta.xml
<CustomField>
    <fullName>Reference_cahier_de_recette__c</fullName>
    <label>Référence cahier de recette</label>
    <length>30</length>
    <type>Text</type>
</CustomField>