force-app/main/default/objects/Fiche_projet__c/fields/Reference_specifications__c.field-meta.xml
<CustomField>
    <fullName>Reference_specifications__c</fullName>
    <label>Référence spécifications</label>
    <length>30</length>
    <type>Text</type>
</CustomField>