force-app/main/default/objects/Fiche_projet__c/fields/Reproductible__c.field-meta.xml
<CustomField>
    <fullName>Reproductible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reproductible</label>
    <type>Checkbox</type>
</CustomField>