force-app/main/default/objects/Fiche_projet__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <description>Alimenter ce champ automatiquement par une règle de workflow en fonction du propriétaire.
NE PAS OUBLIER DE METTRE EN PLACE LES FILES D&apos;ATTENTE</description>
    <inlineHelpText>Alimenter ce champ automatiquement par une règle de workflow en fonction du propriétaire.
NE PAS OUBLIER DE METTRE EN PLACE LES FILES D&apos;ATTENTE</inlineHelpText>
    <label>Responsable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Kerensen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>