force-app/main/default/objects/Fiche_projet__c/fields/Solution_specifique__c.field-meta.xml
<CustomField>
    <fullName>Solution_specifique__c</fullName>
    <label>Solution spécifique</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>