force-app/main/default/objects/Fiche_projet__c/fields/Solution_standard__c.field-meta.xml
<CustomField>
    <fullName>Solution_standard__c</fullName>
    <label>Solution standard</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>