force-app/main/default/objects/Fiche_projet__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <inlineHelpText>Nouveau : statut des nouvelles fiches
A préciser : en attente d&apos;infos du client
En cours : une réponse / correction est en cours
Réalisé : la fiche a été réalisée et doit être testée
Fermé : la fiche est validée
Abandonné : la fiche est annulée</inlineHelpText>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
                <default>true</default>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>A préciser</fullName>
            </value>
            <value>
                <fullName>A arbitrer</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Réalisé</fullName>
            </value>
            <value>
                <fullName>Fermé</fullName>
            </value>
            <value>
                <fullName>Abandonné</fullName>
            </value>
            <value>
                <fullName>Validée EMLYON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>