force-app/main/default/objects/Fiche_projet__c/fields/Statut_specifications__c.field-meta.xml
<CustomField>
    <fullName>Statut_specifications__c</fullName>
    <inlineHelpText>L&apos;anomalie nécessite une mise à jour</inlineHelpText>
    <label>Statut spécifications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>A spécifier</fullName>
            </value>
            <value>
                <fullName>Spécifications à jour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>