force-app/main/default/objects/Fiche_projet__c/fields/Sujet__c.field-meta.xml
<CustomField>
    <fullName>Sujet__c</fullName>
    <externalId>true</externalId>
    <label>Sujet</label>
    <length>80</length>
    <type>Text</type>
</CustomField>