force-app/main/default/objects/Fiche_projet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demande</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Anomalie</fullName>
            </value>
            <value>
                <fullName>Evolution</fullName>
            </value>
            <value>
                <fullName>Version</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>