force-app/main/default/objects/Fiche_projet__c/fields/Validee_client__c.field-meta.xml
<CustomField>
    <fullName>Validee_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validée client</label>
    <type>Checkbox</type>
</CustomField>