force-app/main/default/objects/Fiche_projet__c/fields/Validee_par_Kerensen__c.field-meta.xml
<CustomField>
    <fullName>Validee_par_Kerensen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validée par Kerensen</label>
    <type>Checkbox</type>
</CustomField>