force-app/main/default/objects/Fiche_projet__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Version</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Fiche_projet__c.Type__c</field>
            <operation>equals</operation>
            <value>Version</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fiche_projet__c</referenceTo>
    <relationshipLabel>Fiches projet</relationshipLabel>
    <relationshipName>Fiches_projet</relationshipName>
    <type>Lookup</type>
</CustomField>