force-app/main/default/objects/Fiche_projet__c/fields/Version_txt__c.field-meta.xml
<CustomField>
    <fullName>Version_txt__c</fullName>
    <formula>Version__r.Sujet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version txt</label>
    <type>Text</type>
</CustomField>