force-app/main/default/objects/Fiche_projet__c/recordTypes/Action.recordType-meta.xml
<RecordType>
    <fullName>Action</fullName>
    <active>true</active>
    <description>Suivi des actions et des demandes</description>
    <label>Action</label>
</RecordType>