force-app/main/default/objects/Fiche_projet__c/recordTypes/Anomalie.recordType-meta.xml
<RecordType>
    <fullName>Anomalie</fullName>
    <active>true</active>
    <description>Suivi des anomalies</description>
    <label>Anomalie</label>
</RecordType>