force-app/main/default/objects/Fiche_projet__c/recordTypes/Evolution.recordType-meta.xml
<RecordType>
    <fullName>Evolution</fullName>
    <active>true</active>
    <description>Suivi des évolutions (solutions std, spécifiques, arbitrage...)</description>
    <label>Evolution</label>
</RecordType>