force-app/main/default/objects/Fiche_projet__c/recordTypes/Version.recordType-meta.xml
<RecordType>
    <fullName>Version</fullName>
    <active>true</active>
    <description>Organisation des fiches par montée de version</description>
    <label>Version</label>
</RecordType>