force-app/main/default/objects/Fiche_projet__c/validationRules/Charge_et_date_test_a_renseigner.validationRule-meta.xml
<ValidationRule>
    <fullName>Charge_et_date_test_a_renseigner</fullName>
    <active>false</active>
    <description>Veuillez renseigner la charge et la date en test</description>
    <errorConditionFormula>AND( $User.ByPassValidationRule__c =False,
TEXT( Responsable__c ) = &quot;Kerensen&quot; &amp;&amp; 
(TEXT( Date_en_test__c ) = &quot;&quot; ||  TEXT(Charge_J__c) = &quot;&quot;) &amp;&amp;
( $User.LastName = &quot;CONFIG&quot; || 
 $User.LastName = &quot;DEVELOPPEMENT&quot; || 
 $User.LastName = &quot;DEV (MAROC)&quot; || 
 $User.LastName = &quot;OMRAN&quot; || 
 $User.LastName = &quot;LE GRAND&quot;))</errorConditionFormula>
    <errorDisplayField>Date_en_test__c</errorDisplayField>
    <errorMessage>Veuillez renseigner la charge et la date en test</errorMessage>
</ValidationRule>