force-app/main/default/objects/Fiche_projet__c/validationRules/Date_test_non_modifiable_par_K_par_K.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_test_non_modifiable_par_K_par_K</fullName>
    <active>false</active>
    <description>La date en test n&apos;est modifiable que par les équipes de Kerensen</description>
    <errorConditionFormula>ISCHANGED( Date_en_test__c ) &amp;&amp;  $User.CompanyName = &quot;K par K&quot;</errorConditionFormula>
    <errorDisplayField>Date_en_test__c</errorDisplayField>
    <errorMessage>La date en test n&apos;est modifiable que par les équipes de Kerensen</errorMessage>
</ValidationRule>