force-app/main/default/objects/Fiche_projet__c/listViews/X1_Ouvertes_Client.listView-meta.xml
<ListView>
    <fullName>X1_Ouvertes_Client</fullName>
    <columns>NAME</columns>
    <columns>Priorite__c</columns>
    <columns>Lot__c</columns>
    <columns>Type__c</columns>
    <columns>Validee_par_Kerensen__c</columns>
    <columns>Sujet__c</columns>
    <columns>Date_limite__c</columns>
    <columns>Statut__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Charge_J__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>notEqual</operation>
        <value>Fermé,Abandonné</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Version</value>
    </filters>
    <filters>
        <field>Responsable__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <label>1 - Ouvertes Client</label>
</ListView>