force-app/main/default/objects/Fiche_projet__c/listViews/X4_VERSIONS.listView-meta.xml
<ListView>
    <fullName>X4_VERSIONS</fullName>
    <columns>NAME</columns>
    <columns>Sujet__c</columns>
    <columns>Date_en_test__c</columns>
    <columns>Date_en_prod__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Version</value>
    </filters>
    <label>4 - VERSIONS</label>
    <language>fr</language>
</ListView>