force-app/main/default/objects/Fiche_projet__c/listViews/X5_Toutes_les_actions.listView-meta.xml
<ListView>
    <fullName>X5_Toutes_les_actions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sujet__c</columns>
    <columns>Statut__c</columns>
    <columns>Priorite__c</columns>
    <columns>Date_limite__c</columns>
    <columns>En_retard__c</columns>
    <columns>Risque_planning__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fiche_projet__c.Action</value>
    </filters>
    <label>5 - Toutes les actions</label>
</ListView>