force-app/main/default/objects/Fiche_projet__c/listViews/X5_Toutes_les_fiches.listView-meta.xml
<ListView>
    <fullName>X5_Toutes_les_fiches</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sujet__c</columns>
    <columns>Statut__c</columns>
    <columns>Priorite__c</columns>
    <columns>Date_limite__c</columns>
    <columns>En_retard__c</columns>
    <columns>Risque_planning__c</columns>
    <filterScope>Everything</filterScope>
    <label>5 - Toutes les fiches</label>
</ListView>